<resources>
    <string name="app_name">Assignment#12</string>
    <string name="xml">XML stands for Extensible Markup Language. XML is a markup language much like HTML used to describe data. It is derived from Standard Generalized Markup Language(SGML). Basically, the XML tags are not predefined in XML. We need to implement and define the tags in XML. XML tags define the data and used to store and organize data. It’s easily scalable and simple to develop. In Android, the XML is used to implement UI-related data, and it’s a lightweight markup language that doesn’t make layout heavy. XML only contains tags, while implementing they need to be just invoked. </string>
    <string name="java">Java is a simple, powerful, and robust object-oriented programming language that is suited for many purposes, like building and managing Android apps, web apps, server apps, embedded systems, big data, and more. Java was released in 1995 by Sun Microsystems, which is now a property of Oracle, and most of its features are available in open source.</string>
    <string name="kotlin">Originally intending to make coding in Java more productive, a team from JetBrains introduced Kotlin in 2017. Shortly thereafter in 2018, Kotlin became its own official programming language. With support from Google, Kotlin was introduced as an alternative to Java for mobile development.
Kotlin is a statically typed programming language that can be compiled into JavaScript and can run on both browsers and a Java virtual machine (JVM). An Android developer can code in Kotlin or Kotlin Native and use an IDE to build cross-platform apps.</string>
    <string name="jetpackcompose">Jetpack Compose is Android’s recommended modern toolkit for building native UI. It simplifies and accelerates UI development on Android. Quickly bring your app to life with less code, powerful tools, and intuitive Kotlin APIs.</string>
    <string name="ruby">Ruby is... A dynamic, open source programming language with a focus on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write.</string>
    <string name="php">A popular general-purpose scripting language that is especially suited to web development. Fast, flexible and pragmatic, PHP powers everything from your blog to the most popular websites in the world.</string>
    <string name="python">Python is a popular programming language. Python can be used on a server to create web applications.</string>
    <string name="html">HTML is the standard markup language for Web pages. With HTML you can create your own Website. HTML is easy to learn - You will enjoy it!</string>
    <string name="css">CSS is the language we use to style an HTML document. CSS describes how HTML elements should be displayed. This tutorial will teach you CSS from basic to advanced.</string>
    <string name="javascript">JavaScript is the world\'s most popular programming language. JavaScript is the programming language of the Web. JavaScript is easy to learn.</string>
    <string name="react_native">React Native is an open-source UI software framework created by Meta Platforms, Inc. It is used to develop applications for Android, Android TV, iOS, macOS, tvOS, Web, Windows and UWP by enabling developers to use the React framework along with native platform capabilities</string>
    <string name="angularjs">Angular is a TypeScript-based, free and open-source web application framework led by the Angular Team at Google and by a community of individuals and corporations. Angular is a complete rewrite from the same team that built AngularJS</string>
    <string name="expressjs">Express.js, or simply Express, is a back end web application framework for building RESTful APIs with Node.js, released as free and open-source software under the MIT License. It is designed for building web applications and APIs. It has been called the de facto standard server framework for Node.js</string>
    <string name="mongodb">MongoDB is a source-available cross-platform document-oriented database program. Classified as a NoSQL database program, MongoDB uses JSON-like documents with optional schemas. MongoDB is developed by MongoDB Inc. and licensed under the Server Side Public Lic</string>
    <string name="go">Go is a statically typed, compiled high-level programming language designed at Google by Robert Griesemer, Rob Pike, and Ken Thompson. It is syntactically similar to C, but with memory safety, garbage collection, structural typing, and CSP-style concurrency</string>
    <string name="solidity">Solidity is an object-oriented programming language for implementing smart contracts on various blockchain platforms, most notably, Ethereum. It was developed by Christian Reitwiessner, Alex Beregszaszi, and several former Ethereum core contributors. Programs in Solidity run on Ethereum Virtual Machine.</string>
    <string name="nodejs">Node.js is a cross-platform, open-source server environment that can run on Windows, Linux, Unix, macOS, and more. Node.js is a back-end JavaScript runtime environment, runs on the V8 JavaScript Engine, and executes JavaScript code outside a web browser.</string>
    <string name="kalilinux">Kali Linux is not only a free, convenient, and highly secure Linux OS but also includes over 600 tools for information security. Hackers commonly use Kali Linux because it has security analysis, security auditing, and penetration testing.</string>
    <string name="reverseengineering">Reverse engineering is a process or method through which one attempts to understand through deductive reasoning how a previously made device, process, system, or piece of software accomplishes a task with very little insight into exactly how it does so.</string>
    <string name="cryptography">Cryptography is technique of securing information and communications through use of codes so that only those person for whom the information is intended can understand it and process it.</string>
    <string name="encryption">Encryption is a way of scrambling data so that only authorized parties can understand the information. In technical terms, it is the process of converting human-readable plaintext to incomprehensible text, also known as ciphertext</string>
    <string name="Headline">WELCOME TO JAVAMAN KNOWLEDGE HUB</string>
</resources>