<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AndroidActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_android"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#03A9F4"
        app:cardCornerRadius="25dp">
        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="Android Development"
            android:textColor="#FF5722"
            android:textSize="15dp"
            android:textStyle="italic|bold" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/layout_java_kotlin"
    android:layout_width="match_parent"
      android:layout_below="@+id/cardview_android"
        android:layout_marginTop="25dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:weightSum="6">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_java"
        android:layout_width="100dp"
        android:layout_weight="4"
        android:layout_height="150dp"
        android:src="@drawable/java"
        app:civ_border_width="4dp"
        app:civ_border_color="#F44336"
        />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/java"
                android:textSize="15sp" />
        </ScrollView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="120dp"
            android:weightSum="6">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_xml"
                android:layout_width="100dp"
                android:layout_weight="4"
                android:layout_height="150dp"
                android:src="@drawable/xml"
                app:civ_border_width="4dp"
                app:civ_border_color="#3F51B5"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xml"
                    android:textSize="15sp" />
            </ScrollView>
        </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/layout_java_kotlin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:weightSum="6">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_kotlin"
                android:layout_width="100dp"
                android:layout_weight="4"
                android:layout_height="150dp"
                android:src="@drawable/kotlin"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/green"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kotlin"
                    android:textSize="15sp" />
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="120dp"
            android:weightSum="6">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_jetpack_compose"
                android:layout_width="100dp"
                android:layout_weight="4"
                android:layout_height="150dp"
                android:src="@drawable/jetpack_compose"
                app:civ_border_width="4dp"
                app:civ_border_color="#FFC107"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jetpackcompose"
                    android:textSize="15sp" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>